CProgrammierung/eval_pipline/resources/testcases/bad/fail_invalid_last_lines.stdin
9e2pv784h8:umzq9ou,a740lwelhhxsnj,hc2p3c0ck7w2,ku3w,bv578jsw05,d9t2st6z,s4tup1fz5srotlnvn-47
a740lwelhhxsnj:hc2p3c0ck7w2,umzq9ou,ku3w,d9t2st6z,s4tup1fz5srotlnvn
hc2p3c0ck7w2:umzq9ou,ku3w,swfovup19z5zb5jutq3,s4tup1fz5srotlnvn
4v:hc2p3c0ck7w2,ku3w,umzq9ou,9e2pv784h8,a740lwelhhxsnj,9u8fw95fl2o,swfovup19z5zb5jutq3,5z
ku3w:swfovup19z5zb5jutq3,loqmgcucmw
9u8fw95fl2o:ku3w,swfovup19z5zb5jutq3,a740lwelhhxsnj,hc2p3c0ck7w2,loqmgcucmw
swfovup19z5zb5jutq3:wymssvk
5z:swfovup19z5zb5jutq3,loqmgcucmw,ku3w,9u8fw95fl2o,8n9mwif0lxhk7tbj,wymssvk,gbgui
loqmgcucmw:swfovup19z5zb5jutq3,wymssvk
8n9mwif0lxhk7tbj:loqmgcucmw,wymssvk,9u8fw95fl2o,swfovup19z5zb5jutq3,gbgui,y5hb2oym2xgryz
wymssvk:y5hb2oym2xgryz
gbgui:wymssvk,loqmgcucmw,y5hb2oym2xgryz,ovzvt76
1jmcujjf6g:gbgui,y5hb2oym2xgryz,loqmgcucmw,8n9mwif0lxhk7tbj,wymssvk,eu6bz9nwv7,ovzvt76,hyeemc52tufv80f9rl
eu6bz9nwv7:y5hb2oym2xgryz,ovzvt76,wymssvk,gbgui,hyeemc52tufv80f9rl
ovzvt76:y5hb2oym2xgryz
hyeemc52tufv80f9rl:ovzvt76,y5hb2oym2xgryz,zo
9l:hyeemc52tufv80f9rl,y5hb2oym2xgryz,eu6bz9nwv7,ovzvt76,bq4oamoz8wwwcbii25,zo,pb6bzhik88
01ihqlrcvd:9l,bq4oamoz8wwwcbii25,eu6bz9nwv7,ovzvt76,hyeemc52tufv80f9rl,zo,pb6bzhik88,wrry5htc5wx
bq4oamoz8wwwcbii25:zo,ovzvt76,hyeemc52tufv80f9rl,pb6bzhik88,wrry5htc5wx,n3mvs8summj2l
pb6bzhik88:zo,wrry5htc5wx,xtvw844r0lpkd
wrry5htc5wx:zo,xtvw844r0lpkd
n3mvs8summj2l:wrry5htc5wx,xtvw844r0lpkd,zo,pb6bzhik88
xtvw844r0lpkd:zo
itemveyjar8w:xtvw844r0lpkd,pb6bzhik88,wrry5htc5wx,n3mvs8summj2l,s4tup1fz5srotlnvn,umzq9ou
bv578jsw05:itemveyjar8w,d9t2st6z,wrry5htc5wx,n3mvs8summj2l,xtvw844r0lpkd,s4tup1fz5srotlnvn,umzq9ou
d9t2st6z:s4tup1fz5srotlnvn,n3mvs8summj2l,xtvw844r0lpkd,itemveyjar8w,umzq9ou-237
s4tup1fz5srotlnvn:umzq9ou,xtvw844r0lpkd
I:ovzvt76
A:100
